--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
 
 		a:hover {
 			text-decoration: none;
-			border-bottom: 1px solid #fff;			
+						
 		}
 
 	strong, b {
@@ -283,8 +283,9 @@
     border-width: 1px;
 	}
 
+	
 	.logo a:hover {
-		border-bottom: 1px solid #fff;
+		border-bottom: 1px solid #000;
 	}
 
 	
@@ -352,7 +353,7 @@
 					}
 
 						#header nav > ul > li a:hover {
-							color: #484848;
+							color: #000;
 						}
 
 					#header nav > ul > li:first-child {
@@ -393,13 +394,13 @@
 		}
 
 			#header.alt h1 {
-				color: #ffffff;
+				color: #000;
 				left: 1.5em;
    				 top: 0em;
 			}
 
 				#header.alt h1 a {
-					color: #ffffff;
+					color: #000;
 				}
 
 			#header.alt nav {
@@ -413,7 +414,7 @@
 
 					#header.alt nav a:active, #header.alt nav a:hover {
 						color: #000;
-						border-bottom: 1px solid #fff;
+						border-bottom: 1px solid #000;
 					}
 
 			#header.alt .button {
@@ -438,7 +439,7 @@
 		}
 
 		#banner h2 {
-			color: #ffffff;
+			color: #000;
 			display: inline-block;
 			font-size: 3.5em;
 			line-height: 0.25;
@@ -446,7 +447,7 @@
 		}
 
 		#banner p {
-			color: #fff;
+			color: #000;
 			font-size: 1.5em;
 			margin-bottom: 1.75em;
 			text-transform: uppercase;
@@ -457,19 +458,69 @@
 	}
 
 
+	#banner a {
+			-moz-transition: color 0.2s ease-in-out;
+			-webkit-transition: color 0.2s ease-in-out;
+			-o-transition: color 0.2s ease-in-out;
+			-ms-transition: color 0.2s ease-in-out;
+			transition: color 0.2s ease-in-out;
+			color: #000;
+			text-decoration: none;
+		}
+
+			#banner a:active, #banner a:hover {
+				color: #666;
+			}
+
+		#banner .icons {
+			font-size: 1.5em;
+		}
+
+			#banner .icons li {
+				padding-right: 2.5em;
+			}
+
+				#banner .icons li:last-child {
+					padding-right: 0;
+				}
+
+		
+
+
 /*About*/
 
 #about {
-	background: #b2a9a9;
-    padding: 1% 0;
-/*    opacity: 0.8;
-*/    color: #000;
+	background-image: url("images/overlay.png"), url("../images/pic01.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 50% 50%;
+    color: white;
+    font-family: "Avenir Next", Arial, Helvetica, sans-serif;
+    text-align: center;
+
+    padding: 1% 0
 }
+
+#about h2 {
+	color: #fff;
+}
+
+.about-logo img {
+		text-align: center;
+		border-radius: 50%;
+		height: inherit;
+			left: 1.25em;
+			line-height: inherit;
+			margin: 0;
+			padding: 0;
+			top: 0;
+	}
 
 /*Projects Section */
 
 .projects {
-	background-image: url("images/overlay.png"), url("../images/pic01.jpg");
+	background-image: url("images/overlay.png"), url("../images/pic02.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
